--- a/wercker.yml
+++ b/wercker.yml
@@ -61,13 +61,8 @@ build:
           scl enable devtoolset-2 "MAKEFLAGS=\"-j `cat /proc/cpuinfo | grep processor | wc -l`\" rpmbuild -tb hatohol-*.tar.bz2"
           scl enable devtoolset-2 "gcc --version"
 
+  after-steps:
     - script:
         name: Store built RPMs
         code: |
-          cp -R /root/rpmbuild/RPMS/x86_64/*.rpm "$WERCKER_OUTPUT_DIR"
-
-deploy:
-   steps:
-     - script:
-         name: list files
-         code: ls -l ./
+          cp -R /root/rpmbuild/RPMS/x86_64/*.rpm "$WERCKER_REPORT_ARTIFACTS_DIR"
