--- a/wercker.yml
+++ b/wercker.yml
@@ -25,7 +25,7 @@ build:
     - script:
         name: Setup build enviroment
         code: |
-          yum groupinstall -y 'Development tools'
+          yum groupinstall -y -v 'Development tools'
 
     - script:
         name: Setup newer gcc toolchain and libraries
