--- a/wercker.yml
+++ b/wercker.yml
@@ -66,4 +66,4 @@ build:
         name: Store built RPMs
         code: |
           ls /root/rpmbuild/RPMS/x86_64/*.rpm
-          cp -R /root/rpmbuild/RPMS/x86_64/*.rpm "$WERCKER_REPORT_ARTIFACTS_DIR"
+          cp -R /root/rpmbuild/RPMS/x86_64/*.rpm ${WERCKER_REPORT_ARTIFACTS_DIR}
